[metadata]
name = pebm_pkg
version = 0.0.1
author = Sheina Gendelman
author_email = sheina@campus.technion.ac.il
description = PhysioZoo ECG: Digital electrocardiography biomarkers to assess cardiac conduction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aim-lab/pebm_toolbox/
#project_urls =
#    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = pebm_pkg
install_requires= 
  numpy
  scipy
  os
  pandas
python_requires = >=3.6

[options.packages.find]
where = src
